--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,7 +206,6 @@ allow 172.81.132.94;
 allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -543,6 +542,7 @@ allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 185.91.116.202;
 allow 188.165.200.97;
 allow 188.172.229.15;
@@ -1449,6 +1449,7 @@ allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 allow 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:94e0:2421:dead::1;
 allow 2a03:94e0:242c:dead::1;
 allow 2a03:94e0:243a:dead::1;
@@ -1765,6 +1766,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
+allow 3.233.26.7;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1786,7 +1788,6 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.210.170.200;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1896,6 +1897,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
