--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -484,6 +484,7 @@ deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
 deny 2a03:4000:6:b175:c429:e0ff:fe67:ea12;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f20:531::254;
 deny 2a03:94e0:2421:dead::1;
 deny 2a03:94e0:242c:dead::1;
 deny 2a03:94e0:243a:dead::1;
