--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -179,7 +179,6 @@ allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
-allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -244,6 +243,7 @@ allow 180.150.226.99;
 allow 181.41.143.180;
 allow 181.41.143.240;
 allow 181.41.143.241;
+allow 18.205.209.204;
 allow 184.105.48.40;
 allow 184.75.221.107;
 allow 185.100.85.132;
@@ -538,7 +538,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.7.33.146;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.91.116.202;
@@ -646,6 +645,7 @@ allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
+allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.164.96.146;
 allow 194.164.96.147;
@@ -1401,6 +1401,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:25b0:aaaa:5258::;
 allow 2a02:25b0:aaaa:d2a8::;
@@ -1718,6 +1719,8 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:89c::1;
+allow 2a0f:9400:7e11:b852::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1762,7 +1765,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.134;
-allow 34.199.246.60;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1988,6 +1990,7 @@ allow 82.115.5.145;
 allow 82.115.5.146;
 allow 82.115.5.147;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -2007,6 +2010,7 @@ allow 85.204.116.92;
 allow 85.204.116.93;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 86.104.194.13;
 allow 86.104.75.99;
 allow 86.205.5.107;
 allow 87.118.110.27;
@@ -2030,6 +2034,7 @@ allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.248;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.36.231.128;
@@ -2083,8 +2088,12 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.247;
+allow 94.177.106.37;
 allow 94.177.106.46;
+allow 94.177.106.54;
 allow 94.177.106.55;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
