--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -179,7 +179,6 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
-set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
@@ -244,6 +243,7 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.180;
 set_real_ip_from 181.41.143.240;
 set_real_ip_from 181.41.143.241;
+set_real_ip_from 18.205.209.204;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
@@ -538,7 +538,6 @@ set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.67.82.114;
-set_real_ip_from 185.7.33.146;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 185.84.31.254;
 set_real_ip_from 185.91.116.202;
@@ -646,6 +645,7 @@ set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
+set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.164.122.21;
 set_real_ip_from 194.164.96.146;
 set_real_ip_from 194.164.96.147;
@@ -1401,6 +1401,7 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
+set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:25b0:aaaa:5258::;
 set_real_ip_from 2a02:25b0:aaaa:d2a8::;
@@ -1718,6 +1719,8 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:89c::1;
+set_real_ip_from 2a0f:9400:7e11:b852::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1762,7 +1765,6 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.199.246.60;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1988,6 +1990,7 @@ set_real_ip_from 82.115.5.145;
 set_real_ip_from 82.115.5.146;
 set_real_ip_from 82.115.5.147;
 set_real_ip_from 82.118.242.62;
+set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
@@ -2007,6 +2010,7 @@ set_real_ip_from 85.204.116.92;
 set_real_ip_from 85.204.116.93;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
+set_real_ip_from 86.104.194.13;
 set_real_ip_from 86.104.75.99;
 set_real_ip_from 86.205.5.107;
 set_real_ip_from 87.118.110.27;
@@ -2030,6 +2034,7 @@ set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.248;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.128;
@@ -2083,8 +2088,12 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.247;
+set_real_ip_from 94.177.106.37;
 set_real_ip_from 94.177.106.46;
+set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
+set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
