--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,6 @@ allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
-allow 125.253.31.196;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.15.186;
@@ -162,7 +161,6 @@ allow 154.26.159.157;
 allow 154.30.210.35;
 allow 154.30.210.36;
 allow 154.30.210.37;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.247.72.192;
@@ -675,7 +673,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.50.215;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -697,7 +694,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -820,6 +816,7 @@ allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
 allow 202.61.226.98;
+allow 202.94.246.210;
 allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
@@ -1072,6 +1069,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.20.236.182;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:6180:100:d0::2c:3001;
@@ -1117,7 +1115,6 @@ allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1435,6 +1432,7 @@ allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
+allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1848,6 +1846,7 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.80.208.213;
 allow 45.8.22.207;
+allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
@@ -1928,7 +1927,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.211.254.140;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
