--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -117,7 +117,6 @@ set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
@@ -162,7 +161,6 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
 set_real_ip_from 154.30.210.36;
 set_real_ip_from 154.30.210.37;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -675,7 +673,6 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -697,7 +694,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -820,6 +816,7 @@ set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
+set_real_ip_from 202.94.246.210;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -1072,6 +1069,7 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.20.236.182;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -1117,7 +1115,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1435,6 +1432,7 @@ set_real_ip_from 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
+set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1848,6 +1846,7 @@ set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.208.213;
 set_real_ip_from 45.8.22.207;
+set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.113;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
@@ -1928,7 +1927,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.211.254.140;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
