--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -153,7 +152,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -470,6 +468,7 @@ set_real_ip_from 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
+set_real_ip_from 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 set_real_ip_from 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 set_real_ip_from 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 set_real_ip_from 2a03:4000:56:91:480a:eeff:fea8:f9c6;
