--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -117,6 +117,7 @@ set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
+set_real_ip_from 125.253.31.196;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
@@ -161,6 +162,7 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
 set_real_ip_from 154.30.210.36;
 set_real_ip_from 154.30.210.37;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -205,6 +207,7 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
+set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.209.56;
 set_real_ip_from 178.17.170.23;
@@ -673,6 +676,7 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
+set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -694,6 +698,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -723,6 +728,7 @@ set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
+set_real_ip_from 2001:4ba0:fff8:120::1;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
 set_real_ip_from 2001:620:20d0::23;
@@ -816,7 +822,6 @@ set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
 set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
-set_real_ip_from 202.94.246.210;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
@@ -970,6 +975,7 @@ set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.197.107.138;
+set_real_ip_from 217.79.189.239;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
 set_real_ip_from 23.129.64.133;
@@ -1069,7 +1075,6 @@ set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
-set_real_ip_from 23.20.236.182;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:6180:100:d0::2c:3001;
@@ -1115,6 +1120,7 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1790,9 +1796,9 @@ set_real_ip_from 45.129.199.195;
 set_real_ip_from 45.129.84.243;
 set_real_ip_from 45.129.84.244;
 set_real_ip_from 45.129.84.245;
+set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.142;
@@ -1927,6 +1933,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.146.190.38;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -2009,8 +2016,6 @@ set_real_ip_from 84.252.120.163;
 set_real_ip_from 84.252.121.55;
 set_real_ip_from 84.252.122.44;
 set_real_ip_from 85.17.9.83;
-set_real_ip_from 85.204.116.92;
-set_real_ip_from 85.204.116.93;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
