--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -61,6 +61,7 @@ set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
 set_real_ip_from 107.189.3.11;
+set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.3.249;
 set_real_ip_from 107.189.4.12;
@@ -162,6 +163,7 @@ set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
 set_real_ip_from 154.30.210.36;
 set_real_ip_from 154.30.210.37;
+set_real_ip_from 154.30.210.38;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -240,6 +242,7 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.180;
 set_real_ip_from 181.41.143.240;
 set_real_ip_from 181.41.143.241;
+set_real_ip_from 18.205.112.177;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.221.107;
 set_real_ip_from 185.100.85.132;
@@ -300,7 +303,6 @@ set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
-set_real_ip_from 185.193.125.105;
 set_real_ip_from 185.193.158.134;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.71.10;
@@ -673,7 +675,6 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
@@ -695,6 +696,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 199.83.103.12;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1118,7 +1120,6 @@ set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1151,6 +1152,7 @@ set_real_ip_from 2605:6400:20:ff9::1;
 set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
 set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
 set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
+set_real_ip_from 2605:6400:30:ea58:51a1:e174:d185:d6f1;
 set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
 set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
 set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
@@ -1523,7 +1525,7 @@ set_real_ip_from 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-set_real_ip_from 2a0a:3840:1337:125:0:b9c1:7d69:1337;
+set_real_ip_from 2a0a:3840:8078:27:0:504e:1b42:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1757,11 +1759,11 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
+set_real_ip_from 2a13:d200:8:6::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.237.159.228;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1973,6 +1975,7 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.27.66;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
