--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -35,6 +35,7 @@ set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.189.10.175;
+set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
@@ -83,6 +84,7 @@ set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
 set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
+set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
@@ -162,7 +164,6 @@ set_real_ip_from 154.30.210.35;
 set_real_ip_from 154.30.210.36;
 set_real_ip_from 154.30.210.37;
 set_real_ip_from 154.30.210.38;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -695,7 +696,6 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.83.103.12;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1181,8 +1181,10 @@ set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
 set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
 set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
 set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
+set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
+set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f44f:1::;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1782,7 +1784,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 43.157.40.39;
-set_real_ip_from 44.195.198.177;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1916,6 +1917,7 @@ set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
+set_real_ip_from 52.72.53.229;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
@@ -1971,6 +1973,7 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.27.66;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
